[gd_scene load_steps=26 format=4 uid="uid://bedrpgua2lr2w"]

[ext_resource type="Script" uid="uid://crt6mrwatd5gc" path="res://scripts/game.gd" id="1_bt56w"]
[ext_resource type="Script" uid="uid://bcn84dvqcay8f" path="res://scripts/cam_body.gd" id="3_j3pwe"]
[ext_resource type="Texture2D" uid="uid://bn1pq0rlug3ny" path="res://assets/sprites/Buildings.png" id="3_q8qrq"]
[ext_resource type="Texture2D" uid="uid://b2hdu1vjo48h" path="res://assets/sprites/alll_circle.png" id="3_sxt0o"]
[ext_resource type="Texture2D" uid="uid://ciovns2xk32gf" path="res://assets/sprites/alll_square.png" id="4_jtvkq"]
[ext_resource type="Texture2D" uid="uid://dsqqlk1ugub51" path="res://assets/sprites/Tiles.png" id="4_odmgx"]
[ext_resource type="Texture2D" uid="uid://dnwgnpo6o6c7c" path="res://assets/sprites/belt_left.png" id="5_4e7he"]
[ext_resource type="Texture2D" uid="uid://dyyj4805ge40a" path="res://assets/sprites/belt_straight.png" id="7_dyskb"]
[ext_resource type="Script" uid="uid://3h18x1m2pq2o" path="res://scripts/building_layer.gd" id="8_2g4mo"]
[ext_resource type="Texture2D" uid="uid://y4uc060dyht" path="res://assets/sprites/belt_right.png" id="9_rnb64"]
[ext_resource type="PackedScene" uid="uid://baaaj5wljela5" path="res://scenes/circle_white.tscn" id="11_kvpfn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vfiwi"]
texture = ExtResource("3_q8qrq")
texture_region_size = Vector2i(32, 32)
0:2/size_in_atlas = Vector2i(2, 1)
0:2/0 = 0
0:2/0/texture_origin = Vector2i(-16, 0)
1:0/size_in_atlas = Vector2i(2, 1)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(-16, 0)
0:0/0 = 0
0:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_naqmk"]
texture = ExtResource("4_odmgx")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/modulate = Color(1, 1, 1, 0.686275)
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c63lj"]
texture = ExtResource("5_4e7he")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 4
0:0/animation_columns = 5
0:0/animation_frame_0/duration = 0.2
0:0/animation_frame_1/duration = 0.2
0:0/animation_frame_2/duration = 0.2
0:0/animation_frame_3/duration = 0.2
0:0/animation_frame_4/duration = 0.2
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_v = true
0:0/1/transpose = true
0:0/2 = 2
0:0/2/flip_h = true
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mmeec"]
texture = ExtResource("3_sxt0o")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eoapj"]
texture = ExtResource("4_jtvkq")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jnhu1"]
texture = ExtResource("7_dyskb")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 4
0:0/animation_columns = 5
0:0/animation_frame_0/duration = 0.2
0:0/animation_frame_1/duration = 0.2
0:0/animation_frame_2/duration = 0.2
0:0/animation_frame_3/duration = 0.2
0:0/animation_frame_4/duration = 0.2
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/transpose = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_16wxw"]
texture = ExtResource("9_rnb64")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 4
0:0/animation_columns = 5
0:0/animation_frame_0/duration = 0.2
0:0/animation_frame_1/duration = 0.2
0:0/animation_frame_2/duration = 0.2
0:0/animation_frame_3/duration = 0.2
0:0/animation_frame_4/duration = 0.2
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/transpose = true
0:0/2 = 2
0:0/2/flip_h = true
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_v = true
0:0/3/transpose = true

[sub_resource type="TileSet" id="TileSet_g232t"]
tile_size = Vector2i(32, 32)
sources/3 = SubResource("TileSetAtlasSource_mmeec")
sources/4 = SubResource("TileSetAtlasSource_eoapj")
sources/0 = SubResource("TileSetAtlasSource_vfiwi")
sources/1 = SubResource("TileSetAtlasSource_naqmk")
sources/5 = SubResource("TileSetAtlasSource_jnhu1")
sources/2 = SubResource("TileSetAtlasSource_c63lj")
sources/6 = SubResource("TileSetAtlasSource_16wxw")

[sub_resource type="AtlasTexture" id="AtlasTexture_6oio5"]
atlas = ExtResource("7_dyskb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3tj3"]
atlas = ExtResource("7_dyskb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mbgf"]
atlas = ExtResource("7_dyskb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnrhi"]
atlas = ExtResource("7_dyskb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ag63"]
atlas = ExtResource("7_dyskb")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cirbt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oio5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3tj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mbgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnrhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ag63")
}],
"loop": true,
"name": &"belt_straight",
"speed": 10.0
}]

[node name="game" type="Node2D"]
script = ExtResource("1_bt56w")

[node name="CamBody" type="CharacterBody2D" parent="."]
position = Vector2(288, 162)
motion_mode = 1
script = ExtResource("3_j3pwe")

[node name="Camera2D" type="Camera2D" parent="CamBody"]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_smoothed = true
position_smoothing_enabled = true

[node name="Layers" type="Node2D" parent="."]

[node name="BaseLayer" type="TileMapLayer" parent="Layers"]
tile_set = SubResource("TileSet_g232t")
collision_enabled = false

[node name="BuildingLayer" type="TileMapLayer" parent="Layers"]
tile_set = SubResource("TileSet_g232t")
collision_enabled = false
script = ExtResource("8_2g4mo")

[node name="OreLayer" type="TileMapLayer" parent="Layers"]
tile_map_data = PackedByteArray("AAAKAAkAAwAAAAAAAAAKAAoAAwAAAAAAAAALAAoAAwAAAAAAAAALAAkAAwAAAAAAAAALAAgAAwAAAAAAAAAKAAgAAwAAAAAAAAAJAAkAAwAAAAAAAAAJAAoAAwAAAAAAAAAKAAsAAwAAAAAAAAALAAsAAwAAAAAAAAAMAAoAAwAAAAAAAAAMAAkAAwAAAAAAAAA=")
tile_set = SubResource("TileSet_g232t")
collision_enabled = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="belt" type="Button" parent="CanvasLayer"]
offset_left = 8.0
offset_top = 614.0
offset_right = 49.0
offset_bottom = 645.0
toggle_mode = true
button_mask = 2
text = "Belt"

[node name="hover" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.784314)
z_index = 1
sprite_frames = SubResource("SpriteFrames_cirbt")
animation = &"belt_straight"
autoplay = "belt_straight"

[node name="circle_white" parent="." instance=ExtResource("11_kvpfn")]
position = Vector2(144, 144)

[connection signal="toggled" from="CanvasLayer/belt" to="Layers/BuildingLayer" method="_on_belt_toggled"]
